# PPOIS

sem_1/lab_1/: PolynomialOfOneVariable.cpp  PolynomialOfOneVariable.h  PolynomialOfOneVariableTest.cpp  main.cpp
sem_1/lab_2/: CMakeLists.txt  my_program
sem_1/lab_2/Testing/: AdministratorTest.cpp  ArtGalleryTest.cpp  ArtistTest.cpp  BankTest.cpp  CategoryTest.cpp  ClientTest.cpp  CuratorTest.cpp  EventTest.cpp  GuideTest.cpp  PaintingTest.cpp  ReviewTest.cpp  SecurityTest.cpp  TransactionTest.cpp  WorkersTest.cpp
sem_1/lab_2/main/: ApplicationManager.h  ArtGallery.cpp  Bank.cpp  Bank.h  Client.cpp  Curator.h  Entity.h  Security.h  Tour.cpp  Transaction.cpp  Workers.cpp  includes.h  libraries.h
sem_1/lab_3/: CMakeLists.txt  runTest.cpp
sem_1/lab_3/src/: AIEngineer.cpp  AIEngineer.h  Animator.cpp  Animator.h  ApplicationManager.h  Artist.cpp  Artist.h  Bank.cpp  Bank.h  Category.h  CharacterDesigner.cpp  CharacterDesigner.h  Developer.cpp  Developer.h  Employee.cpp  Employee.h  Game.h  GameProject.cpp  GameProject.h  Human.cpp  Human.h  LevelDesigner.cpp  LevelDesigner.h  MechanicsDesigner.cpp  MechanicsDesigner.h  ProjectManager.cpp  ProjectManager.h  QA.cpp  QA.h  SoundDesigner.cpp  SoundDesigner.h  Transaction.h  UIUXDesigner.cpp  UIUXDesigner.h  includes.h  libraries.h
sem_1/lab_3/tests/: AIEngineerTest.cpp  ArtistTest.cpp  BankTest.cpp  CharacterDesignerTest.cpp  DeveloperTest.cpp  EmployeeTest.cpp  GameProjectTest.cpp  HumanTest.cpp  LevelDesignerTest.cpp  MechanicsDesignerTest.cpp  ProjectManagerTest.cpp  QATest.cpp  SoundDesignerTest.cpp  UIUXDesignerTest.cpp
sem_1/lab_4/: CMakeLists.txt  runTests.cpp
sem_1/lab_4/src/: AdjacentVertexIterator.h  EdgeIter.h  Graph.h  IncidentEdgeIterator.h  VertexIter.h
sem_1/lab_4/tests/: AdjacentVertexIteratorTest.cpp  EdgeIterTest.cpp  GraphTest.cpp  IncidentEdgeIteratorTest.cpp  VertexIterTest.cpp
sem_2/lab_1/: README.md  accounting.py  bake.py  chef.py  client.py  courier.py  dough.py  order.py  pizza.py  pizzeria.py  run.py  tests.py  topping.py  user.py
sem_2/lab_1/diagrams/: order_state_diagram  state_of_program
